styled the calculator

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <button type="button" class="btn btn-grey" data-num="0">0</button>
             <button type="button" class="btn btn-grey" data-num=".">.</button>
 
-            <button type="button" class="btn btn-grey" data-num="=">=</button>
-            <button type="button" class="btn btn-grey" data-num="C">C</button>
+            <button type="button" class="btn btn-equal" data-num="=">=</button>
+            <button type="button" class="btn btn-clear" data-num="C">C</button>
         </div>
     </section>
 
